tests/e2e/macros/procedural/custom/snapshots/e2e__macros__procedural__custom__derive_with_error.snap
---
source: tests/e2e/macros/procedural/custom/mod.rs
expression: report
---
[[expansions]]
analyzed_lines = """
#[derive<caret>(ErrorDeriveMacro)]
#[derive(Error<caret>DeriveMacro)]
struct Empty<caret>Struct {}
struct EmptyStruct {<caret>}
"""
generated_code = """
#[derive(ErrorDeriveMacro)]
struct EmptyStruct {}
"""

mapped_diagnostics:
- url: '[ROOT_URL]test_package/src/lib.cairo'
  diagnostics:
  - related_code: |-
      #[derive(ErrorDeriveMacro)]
      struct EmptyStruct {}
    diagnostic:
      range:
        start:
          line: 0
          character: 0
        end:
          line: 1
          character: 21
      severity: 1
      message: 'Plugin diagnostic: Error from procedural macro'
